🐛 Fix overflow horizontal

--- a/wp-content/themes/abbicuradite/css/styles.less
+++ b/wp-content/themes/abbicuradite/css/styles.less
@@ -1019,3 +1019,14 @@ a{
     }
   }
 }
+
+.show-compilare-btn{
+  @media screen and  (max-width: @large){
+    width: auto!important;
+  }
+}
+.btn-single-pg-aree{
+  @media screen and  (max-width: @small) {
+    display: initial !important;
+  }
+}
